# makeweb

./: .coveragerc  .gitignore  README.md  makeweb.py  pyproject.toml  setup.py  tests.py
examples/: 00-generate-html.py  01-generate-css.py  02-generate-js.html  02-generate-js.py  README.md  chat.py  countdown.py  generate-js.py  hello-again.py  hello-readme.py  hello.py  static_site.py  wiki.py
examples/begin/: generate-css.py  generate-html.py  hello-again.py  hello-readme.py  hello.py
examples/chat/: README.md  chat.py
examples/countdown/: README.md
examples/countdown/static/: timezz.js
examples/journal/: README.md  app.py  fetch-icons.sh  journal.py  pyproject.toml
examples/journal/static/css/: app.css
examples/journal/static/js/: app.js
examples/journal/templates/: base.html  index.html  macros.html
examples/journal/tests/: test_journal.py
examples/static/: air.css  app.css  ghpandoc.css  markdown.css  retro.css
examples/static_site/static/: app.css  ghpandoc.css  retro.css
examples/wiki/: README.md  wiki.py
src/makeweb/: __init__.py  defaults.py  html.py  javascript.py  stylesheet.py  utilities.py
tests/: test_defaults.py  test_javascript.py  test_makeweb.py  test_stylesheet.py  test_utilities.py
